# Matrix-SPDZ

./: README.md
VOLE/: Authentication.h  CMakeCache.txt  CMakeLists.txt  Localcomputation.h  Makefile  MatrixTranspose.h  MatrixTripple.h  Party.h  Share.h  VoleReceiver_TensorVector.h  VoleSender_TensorVector.h  cmake_install.cmake  main  main.cpp
VOLE/SPDZ/: BatchOLE.h  SPDZ_LocalComputation.h  SPDZprotocol.h  SPDZshare.h
VOLE/Tools/: Coeff128.h  NoisyVoleReceiver_TensorVector.h  NoisyVoleSender_TensorVector.h  VopeReceiver.h  VopeSender.h
spdz/: CMakeLists.txt  DNN  file  install.py  linear_regression  mat_mul  mat_mul_mpir  mat_mul_mpir_256  mat_mul_mpir_2parties  mat_mul_mpir_512  mul  mul_Asia20  mul_Asia20_128  mul_Asia20_mpir  mul_mpir  run.sh  run_make.sh  test1  test6
spdz/mpir/: Makefile.in  aclocal.m4  config.h  config.in  config.status  configure  libtool  mpir.h
spdz/mpir/.libs/: libmpir.so.23.0.3  libmpirxx.so.8.4.3  libmpirxx.so.8.4.3T
spdz/mpir/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1
spdz/mpir/cxx/: Makefile.in
spdz/mpir/doc/: Makefile.in  (+3 more)
spdz/network/: broadcast_io.h  network.h
spdz/online/: 20Asiacrypt.h  20Asiacrypt_128(mod 2^64).h  20Asiacrypt_128.h  20Asiacrypt_8.h  DNN.h  linear_regression.h  m_spdz(mod 2^64).h  m_spdz.h  m_spdz_mpir_2parties.h  m_spdz_mpir_512.h  spdz.h  spdz_mpir (copy).h
spdz/test/: CMakeLists.txt  DNN.cpp  linear_regression.cpp  mat_mul.cpp  mat_mul_mpir.cpp  mat_mul_mpir_2parties.cpp  mat_mul_mpir_512.cpp  mul  mul.cpp  mul_Asia20.cpp  mul_Asia20_128.cpp  mul_mpir.cpp
(+240 files in other folders)
